# VRX-Learn-Backend

./: .gitignore  main.py  pyproject.toml
src/: database.py  exceptions.py  settings.py
src/api/: dependencies.py  exception_registry.py
src/api/routers/: courses.py  modules.py  users.py
src/api/schemas/: courses.py  modules.py  users.py
src/commands/: base.py  courses.py  modules.py  users.py  validator.py
src/query_builder/: asyncpg.py  base.py
src/repository/: base.py  courses.py  modules.py  ownership_specification.py  users.py
src/service/: base.py  course.py  files.py  fractional_index.py  modules.py  permission_policy.py  users.py
